--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "chart.js": "^4.2.1",
+    "class-variance-authority": "^0.7.1",
+    "framer-motion": "^12.8.2",
+    "lucide-react": "^0.503.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.2",
     "react-dropzone": "^14.2.3",
     "react-icons": "^4.8.0",
-    "chart.js": "^4.2.1",
-    "react-chartjs-2": "^5.2.0"
+    "react-router-dom": "^6.8.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
@@ -30,6 +33,6 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2",
-    "vite": "^4.3.2"
+    "vite": "^6.3.3"
   }
 }
