--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ flask-cors==3.0.10
 python-dotenv==0.19.0
 gunicorn==20.1.0
 Werkzeug==2.0.1
+requests>=2.27.1
 
 # ML/DL dependencies
 tensorflow>=2.13.0
@@ -11,6 +12,7 @@ numpy>=1.22.3
 pandas>=1.4.1
 matplotlib>=3.5.1
 scikit-learn>=1.0.2
+joblib>=1.1.0
 
 # Audio processing
 librosa>=0.9.1
@@ -21,3 +23,4 @@ Pillow>=9.0.1
 
 # Utilities
 tqdm>=4.62.3
+argparse>=1.4.0
